feat: create assets and update tailwind config theme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'poppins';
+  font-weight: bold;
+  src: url('./assets/fonts/poppins/Poppins-Bold.ttf');
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('./assets/fonts/roboto/Roboto-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'roboto';
+  font-weight: bold;
+  src: url('./assets/fonts/roboto/Roboto-Bold.ttf');
+}
